<?xml version="1.0" encoding="utf-8"?>
<resources>

    
    <!-- All String values -->
    <string name="app_name">JoMe</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="headerText">Page-Create</string>
    <string name="eventNameHint">Event Name</string>
    <string name="eventNameDesc">Event Description</string>
    <string name="venue">Venue</string>
    <string name="sliderDesc">Slider description</string>
    <string name="NoEvent">You have no Events</string>
    <string name="imageDescLetsJo">Lets Go</string>
    <string name="done">DONE</string>
    <string name="Start">Start</string>
    <string name="invite_more">Invite More</string>
    <string name="fifty">50</string>
    <string name="Attend">Attend</string>
    <string name="thirty">30</string>
    <string name="add">Add Venue</string>
    <string name="time_today_9pm_or_set">Time: Today 9pm or Set</string>
    <string name="invite_setting_nearby">Invite Setting Nearby</string>
    <string name="end">End</string>
    <string name="_10_00pm">10:00pm</string>
    <string name="all_day">All day</string>
    <string name="today_8_00pm">Today 8:00pm</string>
    <string name="whtsInmind_Hint">Whats on your mind</string>
    <string name="send_status">Send</string>
    <string name="nearby">Nearby</string>
    <string name="action_search">Search</string>
    <string name="str_btn_find">Search </string>
    <string name="hnt_et_location">Search</string>
    <string name="str_tv_location"> Location</string>
    <string name="event_public"> Public </string>
    <string name="event_private"> Private </string>
    <string name="event_latitude"> Latitiude </string>
    <string name="event_longitude"> Longitude </string>
    <string name="event_start"> Start Time</string>
    <string name="event_end">End Time</string>
    <string name="attend"> Attend </string>
    <string name="friends"> Friends </string>
    <string name="distance"> Distance </string>
    <string name="name"> Name </string>
    <string name="address"> Address </string>
    <string name="search">Event search</string>
     <string name="action_settings">Settings</string>

     <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Push Notifications</string>
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
    

    
    <!-- <string name="app_id">590176497746651</string> -->
  
<!--       key for william oliver -->
     <string name="app_id">263564433831484</string> 
   <!--   key for JoMe App  -->
   
   
  <!--  <string name="app_id">1433192193612265</string>  -->
    <string name="exception">Exception: %1$s</string>
    
    <!-- All Dimen values -->
    <dimen name="margin_left_right">7dp</dimen>
    <dimen name="margin_left_Layout">20dp</dimen>
    <dimen name="margin_right_layout">20dp</dimen>
    <dimen name="margin_Top_Layout">20dp</dimen>
    <dimen name="margin_top">5dp</dimen>
    
    <dimen name="text_size_header">25sp</dimen>
    
    
    
    
    <string name="post_on_wall_title">Post on Wall?</string>
    <string name="post_on_wall">Would you like to post on %1$s\'s wall</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

</resources>