<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="#3099b9" >

        <Button
            android:id="@+id/btnBrowser"
            android:layout_width="55dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:background="@drawable/nav_browser_icon" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/headerText"
            android:textColor="#FFFFFF"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btnBell"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@drawable/nav_bell_icon" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout1" >

        <RelativeLayout
            android:id="@+id/r1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="50dp" >

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="17dp"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/ImageSlider"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/sliderDesc"
                    android:src="@drawable/slider_with_now" />
            </LinearLayout>

            
            <RelativeLayout
                android:id="@+id/relative1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/linearLayout2"
                android:layout_marginLeft="@dimen/margin_left_Layout"
                android:layout_marginRight="@dimen/margin_right_layout"
                android:layout_marginTop="@dimen/margin_Top_Layout"
                android:background="@drawable/event_name_bg" >

                <TextView
                    android:id="@+id/txtInviteMore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="@dimen/margin_left_right"
                    android:layout_marginTop="@dimen/margin_top"
                    android:text="@string/invite_more"
                    android:textColor="#000000"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/txt50"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginRight="@dimen/margin_left_right"
                    android:layout_marginTop="@dimen/margin_top"
                    android:text="@string/fifty"
                    android:textColor="#000000"
                    android:textSize="15sp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relative2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/relative1"
                android:layout_marginLeft="@dimen/margin_left_Layout"
                android:layout_marginRight="@dimen/margin_right_layout"
                android:layout_marginTop="@dimen/margin_Top_Layout"
                android:background="@drawable/event_name_bg" >

                <TextView
                    android:id="@+id/txtattend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="@dimen/margin_left_right"
                    android:layout_marginTop="@dimen/margin_top"
                    android:text="@string/Attend"
                    android:textColor="#000000"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/txt30"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginRight="@dimen/margin_left_right"
                    android:layout_marginTop="@dimen/margin_top"
                    android:text="@string/thirty"
                    android:textColor="#000000"
                    android:textSize="15sp" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/Linear_list_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/relative2"
                android:layout_marginLeft="@dimen/margin_left_Layout"
                android:layout_marginRight="@dimen/margin_right_layout"
                android:layout_marginTop="@dimen/margin_Top_Layout" >

                <ListView
                    android:id="@+id/ListView"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_marginRight="@dimen/margin_left_right"
                    android:layout_marginTop="@dimen/margin_top" >
                </ListView>
            </LinearLayout>
            
            <RelativeLayout
                android:id="@+id/relative3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/Linear_list_view"
                android:layout_marginLeft="@dimen/margin_left_Layout"
                android:layout_marginRight="@dimen/margin_right_layout"
                android:layout_marginTop="@dimen/margin_Top_Layout"
                android:background="@drawable/event_name_bg" >

                <EditText
                    android:id="@+id/edtwhtsInMind"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="@dimen/margin_left_right"
                    android:layout_marginTop="@dimen/margin_top"
                    android:background="@drawable/edit_bg_round"
                    android:hint="@string/whtsInmind_Hint"
                    android:textColor="#000000"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/BtnSend"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerInParent="true"
                    android:background="#3099b9"
                    android:text="@string/send_status" />

            </RelativeLayout>
            
            
            
        </RelativeLayout>
    </ScrollView>

     <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="120" >

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="20"
            android:background="#3da7c7" >
            
            <Button
                android:id="@+id/btnFriendUpdate"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_weight="20"
                android:background="@drawable/bottom_friend_update" />
            
        </RelativeLayout>
        
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="20"
            android:background="#3099b9" >
            
            <Button
                android:id="@+id/btnEventHistory"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerInParent="true"
                android:layout_weight="20"
                android:background="@drawable/bottom_past_event" />
            
        </RelativeLayout>
        
         
       <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="20"
            android:background="#3da7c7" >
            
            <Button
                android:id="@+id/btnMessage"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerInParent="true"
                android:layout_weight="20"
                android:background="@drawable/bottom_messager" />
            
        </RelativeLayout>
        
       <RelativeLayout
           android:layout_width="0dp"
           android:layout_height="match_parent"
           android:layout_weight="20"
           android:background="#3099b9" >
            
            <Button
                android:id="@+id/btnSetting"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerInParent="true"
                android:layout_weight="20"
                android:background="@drawable/bottom_setting" />
            
        </RelativeLayout>
        
           
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="20"
            android:background="#3da7c7" >
            
        	<Button
        	    android:id="@+id/btnInvitationManager"
        	    style="?android:attr/buttonBarButtonStyle"
        	    android:layout_width="50dp"
        	    android:layout_height="50dp"
        	    android:layout_centerInParent="true"
        	    android:layout_weight="20"
        	    android:background="@drawable/bottom_profile" />

        </RelativeLayout>
       
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="20"
            android:background="#3099b9" >
            
	        <Button
	            android:id="@+id/btnHome"
	            style="?android:attr/buttonBarButtonStyle"
	            android:layout_width="50dp"
	            android:layout_height="50dp"
	            android:layout_centerInParent="true"
	            android:layout_weight="20"
	            android:background="@drawable/bottom_home" />

        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>